--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@types/react-redux": "^7.1.25",
     "antd": "^5.2.3",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.6",
     "timers-browserify": "^2.0.12",
     "web-vitals": "^2.1.4"
